# lyik_w2w_plugins

./: .gitignore  Dockerfile  README.md  requirements.txt
application_details_plugins/: pyproject.toml
application_details_plugins/src/lyik/: application_details.py
bank_details/: pyproject.toml
bank_details/src/lyik/: bank_account.py
cdsl_demat_data_parser_plugins/: Latest Response.json  pyproject.toml
cdsl_demat_data_parser_plugins/src/lyik/: cdsl_demat_data_parser.py  form_with_ovd_1103.json  test.json
cdsl_demat_data_parser_plugins/src/lyik/cdsl_demat_utilities/: utility.py
cdsl_demat_data_parser_plugins/src/lyik/cdsl_demat_utilities/models/: models.py
deployment/: Dockerfile  README.md  admin_config.json  compose_lyik_stack.yml  customer.env  forms_config.json  lyik_base.env  makefile  plugin_repos_custom.txt
deployment/certificates/: readme.md  tls.crt  tls.key  wordpass.txt
deployment/fields/: 000_onboarding.fields.csv  041_kyc_holders.fields.csv  050_nomination_details.fields.csv  064_tnc.fields.csv  066_operations.fields.csv  banks.txt  corporate.txt  huf.txt  individual.txt  trust.txt
deployment/forms/: README.md  W2W AOF.csv
deployment/grafana/: custom.ini
deployment/nginx/: nginx.conf  nginx_multi_domain.conf  nginx_single_domain.conf
deployment/plugin_files/: README.md  linked_record.json  ucc_bse_public_key.pem  w2w_protean.pfx
deployment/promtail/: promtail-config.yml
deployment/ssh/: README.md  ssh_config
deployment/users/: README.md  (+4 more)
docs/: service_journeys.md
form_processor_plugins/: pyproject.toml
form_processor_plugins/src/lyik/: __init__.py  application_default.py
generate_kra_data_plugin/: pyproject.toml
generate_kra_data_plugin/src/lyik/: corr_address_proof.json  data.json  data_2.json  generate_kra_data_plugin.py  model.py  payload.json  states.json
generate_kra_data_plugin/src/lyik/kra_mapping_files/: country.json  fatca_country_code.json
generate_kra_data_plugin/src/lyik/kra_models/: form.json  formr2.json  model.py
generate_pdf_plugins/: __init__.py  pyproject.toml
generate_pdf_plugins/src/lyik/: __init__.py  generate_pdf_plugin.py
generate_pdf_plugins/src/lyik/components/: colors.py  components.py  images.py  styles.py  tables.py  text.py
generate_pdf_plugins/src/lyik/components/way_2_wealth/aof/: aof_model.py  aof_text_consts.py  desired_form_json.json
generate_pdf_plugins/src/lyik/components/way_2_wealth/aof/aof_individual/: aof_ind_model.py  aof_ind_text_consts.py
generate_pdf_plugins/src/lyik/components/way_2_wealth/cet_dp/: cet_dp_model.py
generate_pdf_plugins/src/lyik/components/way_2_wealth/ddpi/: ddpi_model.py
generate_pdf_plugins/src/lyik/models/: digi_aadhaar_data.py  document_plugin_config.py  geocode_location.py
generate_pdf_plugins/src/lyik/pdf_generator/: pdf_generator.py
generate_pdf_plugins/src/lyik/pdf_utilities/: pdf_core.py  utility.py
generate_pdf_plugins/tests/: form_digilocker_1103.json  form_digilocker_1303.json  form_with_ovd_1103.json  test_generate_pdf.py  test_json_data2012.json  test_json_data_digilocker2612.json  test_json_data_ovd23_01.json
id_gen_plugin/: pyproject.toml
id_gen_plugin/src/lyik/: id_gen.py
nominee_verification_plugin/: pyproject.toml
nominee_verification_plugin/src/lyik/: __init__.py  nominee_verification_plugin.py
nsdl_demat_account_plugins/: pyproject.toml
nsdl_demat_account_translator_plugin/: pyproject.toml
nsdl_demat_account_translator_plugin/src/lyik/: demat_header.txt  demat_paload.json  form.json  form_record_mapping.py  nsdl_demat_translator.py
nsdl_demat_account_translator_plugin/src/lyik/mapping_json_files/: client_sub_type.json  gender.json  gross_anual_income.json
nsdl_demat_account_translator_plugin/src/lyik/nsdl_demat_model/: form_record_mpdel.py
nsdl_demat_account_translator_plugin/src/lyik/nsdl_mapping_json_files/: country.json  nominee_relationship.json  occupation.json  states.json
nsdl_demat_account_translator_plugin/src/lyik/nsdl_transator_utility/: validation_utility.py
plugin_operations_list/: pyproject.toml
plugin_operations_list/src/lyik/: __init__.py  plugin_operations_list.py
plugin_pan_verification/: pyproject.toml
plugin_pan_verification/src/lyik/: __init__.py  plugin_w2w_pan_verification.py
plugin_tech_xl/: pyproject.toml
plugin_tech_xl/src/lyik/: __init__.py  plugin_w2w_tech_xl_demat.py
plugin_trading_info_verification/: pyproject.toml
plugin_trading_info_verification/src/lyik/: __init__.py  plugin_trading_info_verification.py
plugin_w2w_account_verification/: pyproject.toml
plugin_w2w_account_verification/src/lyik/: __init__.py  plugin_w2w_account_verification.py
plugin_w2w_esigning/: pyproject.toml
plugin_w2w_esigning/src/lyik/: plugin_w2w_esigning.py
plugin_w2w_esigning/src/lyik/w2w_esigning_utility/: utility.py
plugin_w2w_networth_verification/: pyproject.toml
plugin_w2w_networth_verification/src/lyik/: __init__.py  plugin_w2w_networth_verification.py
presave_plugins/: pyproject.toml
presave_plugins/src/lyik/: client.py
presave_processor_plugins/: pyproject.toml
presave_processor_plugins/src/lyik/: __init__.py  application_id.py
state_processor_plugins/: pyproject.toml
state_processor_plugins/src/lyik/: __init__.py  state_processor.py
sub_broker_verification_plugin/: pyproject.toml
sub_broker_verification_plugin/src/lyik/: __init__.py  sub_broker_verification_plugin.py
tech_xl_plugins/: pyproject.toml
tech_xl_plugins/src/lyik/: tech_xl_create_account_plugin.py  tech_xl_download_payload_plugin.py
tech_xl_plugins/src/lyik/tech_xl_utils/: utils.py
trading_account_verification_plugin/: pyproject.toml
trading_account_verification_plugin/src/lyik/: __init__.py  trading_account_verification_plugin.py
ucc_data_parser_plugins/: pyproject.toml
ucc_data_parser_plugins/src/lyik/: ucc_data_parsers.py
ucc_data_parser_plugins/src/lyik/ucc_data_parser_utilities/: bse_utility.py  nse_utility.py
ucc_data_parser_plugins/src/lyik/ucc_data_parser_utility/: nse_utility.py
ucc_data_parser_plugins/src/lyik/utility/: bse_utility.py  nse_utility.py
(+111 files in other folders)
