[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin-application-details"
version = "0.1.0"
description = "Plugin for verifying Application Details."
readme = "README.md"
authors = [{ name = "Rahul Choudhury", email = "rahulc@lyik.com" }]
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
dependencies = []

[project.entry-points."LYIK"]
_200_VERIFIER_APPLICATION_DETAILS = "lyik.application_details:ApplicationDetails"
