[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin-cdsl-demat-data-parser"
version = "0.1.0"
description = "A plugin to formulate the form record data into CDSL payload."
readme = "README.md"
authors = [{ name = "Deepak G", email = "dgupta@lyik.com" }]
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.package-data]

[project.entry-points."LYIK"]
_200_CDSL_DEMAT_DATA_PARSER = "lyik.cdsl_demat_data_parser:CDSLDematDataParser"
