[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin-nominee-allocation-verification"
version = "0.1.0"
description = "A plugin to verify nominee(s)' percentage of allocations"
readme = "README.md"
authors = [{ name = "Debasish Sarkar", email = "debasish@lyik.com" }]
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
dependencies = []

[project.entry-points."LYIK"]
_200_VERIFIER_NOMINEE_ALLOCATION = "lyik.nominee_verification_plugin:NomineeAllocationVerification"