[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin-pan-verification"
version = "0.1.0"
description = "A plugin to verify if PAN is already registered with w2w"
readme = "README.md"
authors = [{ name = "Arindam Sarkar", email = "arindam@lyik.com" }]
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
dependencies = ["pymssql==2.3.2"]

[project.entry-points."LYIK"]
_100_PLUGIN_PAN_VERIFICATION = "lyik.plugin_w2w_pan_verification:PanVerification"