[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin-trading-information-verification"
version = "0.1.0"
description = "A plugin to verify trading information"
readme = "README.md"
authors = [{ name = "Debasish Sarkar", email = "debasish@lyik.com" }]
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
dependencies = []

[project.entry-points."LYIK"]
_200_VERIFIER_TRADING_INFORMATION = "lyik.plugin_trading_info_verification:TradingInformationVerification"
