[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin-w2w-account-verification"
version = "0.1.0"
description = "A plugin to get account details by registered PAN"
readme = "README.md"
authors = [{ name = "Arindam Sarkar", email = "arindam@lyik.com" }]
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
dependencies = ["pymssql==2.3.2"]

[project.entry-points."LYIK"]
_200_VERIFIER_ACCOUNT_DETAILS = "lyik.plugin_w2w_account_verification:AccountDetailsVerification"

