[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "w2w-presave-client-info-plugin"
version = "0.1.0"
description = "Plugin to save the client information to the record"
readme = "README.md"
authors = [
    { name = "Akhil Babu", email = "akhilbabu@lyik.com" }
]
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
dependencies = [
]

[project.entry-points."LYIK"]
w2w_client_info_presave_processor = "lyik.client:ClientInformation"
