[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin-state-processor"
version = "0.1.0"
description = "State Processor plugin"
readme = "README.md"
authors = [{ name = "Akhil Babu", email = "akhilbabu@lyik.com" }]
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
dependencies = []

[project.entry-points."LYIK"]
_200_W2W_STATE_PROCESSOR = "lyik.state_processor:W2WStateProcessor"