[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin-trading-ac-information-verification"
version = "0.1.0"
description = "A plugin to verify trading account information"
readme = "README.md"
authors = [{ name = "Debasish Sarkar", email = "debasish@lyik.com" }]
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
dependencies = []

[project.entry-points."LYIK"]
_10_VERIFIER_TRADING_ACCOUNT = "lyik.trading_account_verification_plugin:TradingAccountVerification"
